<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="369dp"
            android:layout_height="86dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#F1D4DB"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAbout">

            <TextView
                android:id="@+id/txt_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/introduction"
                android:textColor="#795548"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="296dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                android:textColor="#795548"
                android:textSize="11sp"
                android:textStyle="bold" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="369dp"
            android:layout_height="86dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#F1D4DB"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            >

            <TextView
                android:id="@+id/txt_client"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:text="@string/client1"
                android:textColor="#795548"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_description2"
                android:layout_width="296dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                android:textColor="#795548"
                android:textSize="11sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="369dp"
            android:layout_height="313dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#F1D4DB"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TableLayout
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_gravity="center|top"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_belen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belen_elijah"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_dev1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Developer"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_gravity="center|top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_delaCruz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dela Cruz, John Carlo"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_dev2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Developer"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_gravity="center|top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_segui"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Segui, Erie Mae"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_dev3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Developer"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:layout_gravity="center|top"
                android:layout_marginStart="20dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_valera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Valera, Celine"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_dev4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Developer"
                        android:textStyle="bold" />

                </TableRow>
            </TableLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>